deploy/nacos/nacos-standalone-upgrade.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  labels:
    k8s.kuboard.cn/layer: cloud
    k8s.kuboard.cn/name: nacos
spec:
  serviceName: nacos
  replicas: 1
  selector:
    matchLabels:
      k8s.kuboard.cn/layer: cloud
      k8s.kuboard.cn/name: nacos
  template:
    metadata:
      labels:
        k8s.kuboard.cn/layer: cloud
        k8s.kuboard.cn/name: nacos
    spec:
      containers:
      - name: nacos
        image: 172.28.242.36:85/public/nacos:3.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8848
          hostPort: 8848
          name: client
          protocol: TCP
        - containerPort: 9848
          hostPort: 9848
          name: client-rp
          protocol: TCP
        - containerPort: 9849
          hostPort: 9849
          name: raft-rpc
          protocol: TCP
        volumeMounts:
        - mountPath: /home/nacos/logs
          name: volume-xaanz
        - mountPath: /home/nacos/init.d/config.properties
          name: volume-zjbp4
          subPath: config.properties
      volumes:
      - name: volume-xaanz
        persistentVolumeClaim:
          claimName: nfs-nacos
      - name: volume-zjbp4
        configMap:
          name: nacos-config
          items:
          - key: config.properties
            path: config.properties
